[package]
edition = "2021"
name = "wtools-rust"
version = "0.5.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.0.0", default-features = false, features = ["napi4"] }
napi-derive = "2.0.0"
sha2 = "0.9.8"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3"

[build-dependencies]
napi-build = "1.2.0"

[profile.release]
lto = true
